--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-star-ratings": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
@@ -28,7 +28,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://rssa.recsys.dev/preference-communication",
+  "homepage": "https://rssa.recsys.dev/preference-community",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -43,7 +43,6 @@
   },
   "description": "i# Getting Started with Create React App",
   "main": "index.js",
-  "devDependencies": {},
   "keywords": [
     "rssa"
   ],
