--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html-react-parser": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
