--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-star-ratings": "^2.3.0",
+    "rssa-api": "github:ShahanM/react-rssa-api",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
