--- a/package.json
+++ b/package.json
@@ -51,5 +51,14 @@
     "rssa"
   ],
   "author": "Mehtab (Shahan) Iqbal",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/node": "^16.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "typescript": "^4.4.2",
+    "@babel/preset-typescript": "^7.18.6"
+  }
 }
