--- a/package.json
+++ b/package.json
@@ -50,15 +50,16 @@
   "keywords": [
     "rssa"
   ],
-  "author": "Mehtab (Shahan) Iqbal",
+  "author": "Mehtab (Shahan)",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/node": "^16.7.13",
+    "@types/react-star-ratings": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "typescript": "^4.4.2",
-    "@babel/preset-typescript": "^7.18.6"
+    "typescript": "^4.4.2"
   }
 }
