--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "16": "^0.0.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.0",
-    "dompurify": "^3.1.6",
-    "html-react-parser": "^4.2.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "@floating-ui/react": "^0.26.12",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/dompurify": "^3.0.5",
+    "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.5",
+    "highlight.js": "^11.9.0",
+    "history": "^5.3.0",
+    "html-react-parser": "^5.1.10",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-country-region-selector": "^3.6.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "react-shepherd": "^4.3.0",
     "react-star-ratings": "^2.3.0",
     "rssa-api": "github:ShahanM/react-rssa-api",
     "web-vitals": "^2.1.4"
@@ -50,16 +52,29 @@
   "keywords": [
     "rssa"
   ],
-  "author": "Mehtab (Shahan)",
+  "author": "Mehtab 'Shahan' Iqbal & Alex",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-star-ratings": "^2.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "typescript": "^4.4.2"
+    "@types/sass": "^1.45.0",
+    "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.1.0",
+    "sass": "^1.79.4",
+    "ts-jest": "^29.1.5",
+    "typescript": "^4.9.5"
   }
 }
