--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
+    "react-bootstrap-icons": "^1.11.5",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
